# CV_Lab5

./: .gitignore  CMakeLists.txt  README.md  camera.xml  main.cpp
images/: 2022-04-05-121756.webm
